# test-rust

./: README.md
hello-rust/src/: main.rs
my-project/tests/: Cargo.toml
